many changes to swagger
